JDK 11 compatibility